--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- link the font awesome CDN -->
-    <link
-      href="https://use.fontawesome.com/releases/v5.0.1/css/all.css"
-      rel="stylesheet"
-    />
+<head>
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" >
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://use.fontawesome.com/1fb0eb3889.js"></script>
+  <title>Where work happens | Slack</title>
+</head>
 
-    <!-- link your styles -->
-    <link rel="stylesheet" href="./stylesheets/style.css" />
-    <title>Where work happens | Slack</title>
-  </head>
-
-  <body>
-    <nav>
-      <img src="./images/slack-logo.png" alt="slack_logo" />
-      <ul>
-        <li>Why Slack?</li>
-        <li>Pricing</li>
-        <li>About Us</li>
-        <li>Your Workspaces</li>
-      </ul>
-    </nav>
-    <header>
-      <img src="./images/home_talking.png" alt="home_work_happening" />
-      <h1>Where Work Happens</h1>
-      <p>
-        When your team needs to kick off a project, hire a new employee, deploy
-        some code, review a sales contract, finalize next year's budget, measure
-        an A/B test, plan your next office opening, and more, Slack has you
-        covered.
-      </p>
-      <button type="button" name="button">GET STARTED</button>
-      <p>Already using Slack? <a href="#">Sign in</a></p>
+<body>
+  <nav>
+    <div class="menu">
+      <div class="slack-logo_div">
+          <img class="slack-logo" src="./images/slack-logo.png" alt="slack_logo">
+        </div>
+      <div class="nav-links">
+        <ul>
+          <img class="hamburger" src="https://a.slack-edge.com/a425/marketing/img/icons/icon_menu.svg" alt="menu icon">
+          <!-- <li>Why Slack?</li>
+          <li>Pricing</li>
+          <li>About Us</li>
+          <li>Your Workspaces</li> -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div id="center-position">
+    <header class="header">
+      <img class="work-happening" src="./images/home_talking.png" alt="home_work_happening">
+      <div class="header-2">
+        <h1>Where Work <br/>Happens</h1>
+        <p>When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.</p>
+        <button class="blue-btn" type="button" name="button">GET STARTED</button>
+        <p>Already using Slack? <a href="#">Sign in</a></p>
+      </div>
     </header>
     <main>
-      <div>
-        <h2>You're in good company</h2>
-        <p>
-          Millions of people around the world have already made Slack the place
-          where their work happens.
-        </p>
-        <button>DISCOVER WHY</button>
-        <img src="./images/airbnb-logo.png" alt="" />
-        <img src="./images/capital-one-logo.png" alt="" />
-        <img src="./images/harvard-logo.png" alt="" />
-        <img src="./images/los-angeles-times-logo.png" alt="" />
-        <img src="./images/oracle-logo.png" alt="" />
-        <img src="./images/ticketmaster-logo.png" alt="" />
+      <div class="main">
+        <h2>You´re in good company</h2>
+        <p>Millions of people around the world have already made Slack the place where their work happens.</p>
+        <button class="white-btn">DISCOVER WHY</button>
+        <div class="row-1">
+          <img src="./images/airbnb-logo.png" alt="">
+          <img class="middle-border" src="./images/capital-one-logo.png" alt="">
+          <img src="./images/harvard-logo.png" alt="">
+        </div>
+        <div class="row-2">
+          <img src="./images/los-angeles-times-logo.png" alt="">
+          <img class="middle-border" src="./images/oracle-logo.png" alt="">
+          <img src="./images/ticketmaster-logo.png" alt="">
+        </div>
       </div>
-      <div>
+      <div class="try-free">
         <p>Try it for free</p>
         <p>Already using Slack? <a href="">Sign in</a></p>
-        <button type="button" name="button">GET STARTED</button>
+        <button class="blue-btn" type="button" name="button">GET STARTED</button>
       </div>
     </main>
     <footer>
-      <div>
-        <img src="./images/iso-slack.png" alt="" />
+      <div class="foot">
+        <img src="./images/iso-slack.png" alt="">
         <ul>
-          <li>COMPANY</li>
+          <li><strong>COMPANY</strong></li>
           <li>About Us</li>
           <li>Careers</li>
           <li>Blog</li>
@@ -71,7 +71,7 @@
           <li>Brand Guidelines</li>
         </ul>
         <ul>
-          <li>PRODUCT</li>
+          <li><strong>PRODUCT</strong></li>
           <li>Why Slack?</li>
           <li>Enterprise</li>
           <li>Customer Stories</li>
@@ -79,7 +79,7 @@
           <li>Security</li>
         </ul>
         <ul>
-          <li>RESOURCES</li>
+          <li><strong>RESOURCES</strong></li>
           <li>Download</li>
           <li>Help Center</li>
           <li>Guides</li>
@@ -88,28 +88,30 @@
           <li>API</li>
         </ul>
         <ul>
-          <li>EXTRAS</li>
+          <li><strong>EXTRAS</strong></li>
           <li>Podcast</li>
           <li>Slack Shop</li>
           <li>Slack at Work</li>
           <li>Slack Fund</li>
         </ul>
       </div>
-      <div>
+      <div class="little-foot">
         <ul>
-          <li>Status</li>
-          <li>Privacy & Terms</li>
-          <li>Contact Us</li>
+          <li><strong>Status</strong></li>
+          <li><strong>Privacy & Terms</strong></li>
+          <li><strong>Contact Us</strong></li>
         </ul>
-        <div>
-          <img src="./images/us-flag.png" alt="" />
+        <div class="social">
+          <img src="./images/us-flag.png" alt="">
           <span>English (US)</span>
-          <i class="fas fa-chevron-down"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-youtube"></i>
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-youtube-play" aria-hidden="true"></i>
         </div>
       </div>
     </footer>
-  </body>
+  </div>
+</body>
+
 </html>
